fix(post): make highlighted code overflow in the horizontal
Fixes #4

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -50,6 +50,7 @@ a {
 // Highlighter
 // -------------------------------------------------------------------------------------------------
 .highlight {
+  overflow-x: auto;
   padding: 12px;
   background: #f2f2f2;
 
